# METU-CENG-Homeworks

CENG140-C-Programming/: pointer_exercise.c
CENG242-ProgrammingLanguage-Concepts/: README.md
CENG242-ProgrammingLanguage-Concepts/PE1/: PE1.hs
CENG242-ProgrammingLanguage-Concepts/PE2/: PE2.hs
CENG242-ProgrammingLanguage-Concepts/PE3/: pe3.hs
CENG242-ProgrammingLanguage-Concepts/PE4/: PE4.hs
CENG242-ProgrammingLanguage-Concepts/PE5/: PE5.cpp
CENG242-ProgrammingLanguage-Concepts/PE8/: main.pl
CENG331-Computer-Organization/Architecture Lab/: kth_bst.ys
CENG331-Computer-Organization/Attack Lab/: ctarget.l1  ctarget.l3
CENG331/Architecture Lab/: insert_ll.ys  kth_ll.ys
CENG331/Attack Lab/: ctarget.l2  rtarget.l2
CENG331/Performance Lab/: kernels.c
CENG334-Operating-Systems/Homework-1/: Makefile  eshell.cpp  inp.txt
CENG334-Operating-Systems/Homework-2/: CMakeLists.txt  Car.h  CrossRoad.h  Ferry.h  Makefile  NarrowBridge.h  RoadConnector.h  WriteOutput.h  main.cpp
CENG336-EMBEDDED-SYSTEMS/THE3/: LCD.h
CENG336-Introduction-EmbeddedSystemsDevelopment/THE1/: main.s
CENG336-Introduction-EmbeddedSystemsDevelopment/THE2/: main.s
CENG336-Introduction-EmbeddedSystemsDevelopment/THE3/: ADC.h  Pragmas.h  main.c  the3.h
CENG403-Introduction-DeepLearning/: README.md
CENG403-Introduction-DeepLearning/Homework-1/: README.md  cergen.py
CENG403-Introduction-DeepLearning/Homework-2/: README.md  the2.ipynb
CENG435-DataCommunicationsAndNetworking/: Dockerfile  README.md
CENG445-SoftwareDev-ScriptingLang/: README.md
(+95 files in other folders)
